--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NewsApp</string>
+    <drawable name="color1">#339966</drawable>
+    <drawable name="color2">#47C283</drawable>
 </resources>
