--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NewsApp</string>
     <drawable name="color1">#339966</drawable>
     <drawable name="color2">#47C283</drawable>
+    <string name="title_activity_detail1">DetailActivity1</string>
 </resources>
